tests/sumo/devices/rerouting/assignment/errors/unknown_taz/errors.sumo
Error: Source taz '1' not known for trip '0'!
Quitting (on error).
